; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if.c_ifioctllocked.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if.c_ifioctllocked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }
%struct.proc = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ifioctllocked(%struct.socket* %0, i32 %1, i32 %2, %struct.proc* %3) #0 {
  %5 = alloca %struct.socket*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.proc*, align 8
  %9 = alloca i32, align 4
  store %struct.socket* %0, %struct.socket** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store %struct.proc* %3, %struct.proc** %8, align 8
  %10 = load %struct.socket*, %struct.socket** %5, align 8
  %11 = call i32 @socket_unlock(%struct.socket* %10, i32 0)
  %12 = load %struct.socket*, %struct.socket** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* %7, align 4
  %15 = load %struct.proc*, %struct.proc** %8, align 8
  %16 = call i32 @ifioctl(%struct.socket* %12, i32 %13, i32 %14, %struct.proc* %15)
  store i32 %16, i32* %9, align 4
  %17 = load %struct.socket*, %struct.socket** %5, align 8
  %18 = call i32 @socket_lock(%struct.socket* %17, i32 0)
  %19 = load i32, i32* %9, align 4
  ret i32 %19
}

declare dso_local i32 @socket_unlock(%struct.socket*, i32) #1

declare dso_local i32 @ifioctl(%struct.socket*, i32, i32, %struct.proc*) #1

declare dso_local i32 @socket_lock(%struct.socket*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
